# re-unplayplay

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  binding-options.js  cmake.toml  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: cxx.yml  js.yml  python.yml  test_cxx.yml  test_publish_python.yml  test_python.yml
cmake/: cmakejs.cmake  cmkr.cmake
scripts/: dump_stack.py  generate_tests.py
src/csharp/: re_unplayplay_export.cpp  re_unplayplay_export.h
src/csharp/re-unplayplay/: NativeLibraryLoader.cs  Program.cs  UnplayplayWrapper.cs  re-unplayplay.csproj  re-unplayplay.sln
src/js/: main.cpp
src/js/re-unplayplay/: index.ts
src/lib/: constants.hpp  idadefs.hpp  types.hpp  unplayplay.hpp  util.hpp
src/lib-tests/: test_bind_and_decrypt_key.cpp  test_bind_key.cpp  test_decrypt_key.cpp
src/lib/reversals/: bind_key.cpp  decrypt_key.cpp
src/python/: main.cpp
src/python-tests/: test_bind_key.py  test_decrypt_and_bind.py  test_decrypt_key.py
src/python/re_unplayplay/: __init__.py
src/tests/: test_bind_key.cpp
tests/js/: abi.test.ts  unit.test.js  unit.test.ts
tests/lib/: test_bind_and_decrypt_key.cpp  test_bind_key.cpp  test_decrypt_key.cpp
tests/python/: test_abi.py  test_bind_key.py  test_decrypt_and_bind.py  test_decrypt_key.py  test_unit.py
