[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "re-unplayplay"
version = "1.2.5"
description="A rewritten version of unplayplay"
readme = "README.md"
authors = [
    { name = "es3n1n" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
build.targets = ["re-unplayplay-python"]
wheel.packages = ["src/python/re_unplayplay"]

[tool.scikit-build.cmake.define]
RE_UNPP_BUILD_PYTHON = "ON"
CMKR_SKIP_GENERATION = "ON"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
    "error",
    "ignore::pytest.PytestCacheWarning",
]
testpaths = ["tests/python/"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = false

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-command = "pytest {project}/tests/python"
test-extras = ["test"]

[tool.cibuildwheel.pyodide]
build-frontend = {name = "build", args = ["--exports", "whole_archive"]}
